feat: add initial structure on the body

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Q Library</title>
 </head>
 <body>
+    <header>
+        <section>
+            <h1>q.lib</h1>
+            <p>Everything about books you love.</p>
+        </section>
+    </header>
+    <main>
+        <section>
+            <div id="book-list-container">
+                <div id="book-container"></div>
+            </div>
+            <div id="button-container">
+                <button>Add book</button>
+            </div>
+        </section>
+    </main>
     <script src="./script.js"></script>
 </body>
 </html>
