feat: add main initial content structure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <section>
             <div id="book-list-container">
-                <div id="book-container"></div>
+                <div class="book-container"></div>
             </div>
             <div id="button-container">
                 <button>Add book</button>
