feat: add book container initial structure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
     <main>
         <section>
             <div id="book-list-container">
-                <div class="book-container"></div>
+                <div class="book-container">
+                    <h3>Atomic Habits</h3>
+                    <p>
+                        James Clear 
+                        <br>
+                        320 pages
+                    </p>
+                </div>
             </div>
             <div id="button-container">
                 <button>Add book</button>
