feat: add read toggle initial structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <section>
-            <div id="book-list-container">
+            <div class="book-list-container">
                 <div class="book-container">
                     <h3>Atomic Habits</h3>
                     <p>
@@ -23,6 +23,10 @@
                         <br>
                         320 pages
                     </p>
+                </div>
+                <div class="read-toggle-container">
+                    <input type="checkbox" id="read-toggle">
+                    <label for="read-toggle"></label>
                 </div>
             </div>
             <div id="button-container">
