--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
                     </p>
                 </div>
                 <div class="read-toggle-container">
-                    <input type="checkbox" id="read-toggle">
-                    <label for="read-toggle"></label>
+                    <div id="toggle">
+                        <input type="checkbox" id="read-toggle">
+                        <label for="read-toggle" id="toggle-label"></label>
+                    </div>
                 </div>
             </div>
             <div id="button-container">
