refactor: modify the initial structure of main
* separation of the "Add book" button to the list of books section
* addition of multiple books in the list for testing

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </section>
     </header>
     <main>
-        <section>
+        <section id="book-section">
             <div class="book-list-container">
                 <div class="book-container">
                     <h3>Atomic Habits</h3>
@@ -31,6 +31,152 @@
                     </div>
                 </div>
             </div>
+            <div class="book-list-container">
+                <div class="book-container">
+                    <h3>Atomic Habits</h3>
+                    <p>
+                        James Clear 
+                        <br>
+                        320 pages
+                    </p>
+                </div>
+                <div class="read-toggle-container">
+                    <div id="toggle">
+                        <input type="checkbox" id="read-toggle">
+                        <label for="read-toggle" id="toggle-label"></label>
+                    </div>
+                </div>
+            </div>
+            <div class="book-list-container">
+                <div class="book-container">
+                    <h3>Atomic Habits</h3>
+                    <p>
+                        James Clear 
+                        <br>
+                        320 pages
+                    </p>
+                </div>
+                <div class="read-toggle-container">
+                    <div id="toggle">
+                        <input type="checkbox" id="read-toggle">
+                        <label for="read-toggle" id="toggle-label"></label>
+                    </div>
+                </div>
+            </div>
+            <div class="book-list-container">
+                <div class="book-container">
+                    <h3>Atomic Habits</h3>
+                    <p>
+                        James Clear 
+                        <br>
+                        320 pages
+                    </p>
+                </div>
+                <div class="read-toggle-container">
+                    <div id="toggle">
+                        <input type="checkbox" id="read-toggle">
+                        <label for="read-toggle" id="toggle-label"></label>
+                    </div>
+                </div>
+            </div>
+            <div class="book-list-container">
+                <div class="book-container">
+                    <h3>Atomic Habits</h3>
+                    <p>
+                        James Clear 
+                        <br>
+                        320 pages
+                    </p>
+                </div>
+                <div class="read-toggle-container">
+                    <div id="toggle">
+                        <input type="checkbox" id="read-toggle">
+                        <label for="read-toggle" id="toggle-label"></label>
+                    </div>
+                </div>
+            </div>
+            <div class="book-list-container">
+                <div class="book-container">
+                    <h3>Atomic Habits</h3>
+                    <p>
+                        James Clear 
+                        <br>
+                        320 pages
+                    </p>
+                </div>
+                <div class="read-toggle-container">
+                    <div id="toggle">
+                        <input type="checkbox" id="read-toggle">
+                        <label for="read-toggle" id="toggle-label"></label>
+                    </div>
+                </div>
+            </div>
+            <div class="book-list-container">
+                <div class="book-container">
+                    <h3>Atomic Habits</h3>
+                    <p>
+                        James Clear 
+                        <br>
+                        320 pages
+                    </p>
+                </div>
+                <div class="read-toggle-container">
+                    <div id="toggle">
+                        <input type="checkbox" id="read-toggle">
+                        <label for="read-toggle" id="toggle-label"></label>
+                    </div>
+                </div>
+            </div>
+            <div class="book-list-container">
+                <div class="book-container">
+                    <h3>Atomic Habits</h3>
+                    <p>
+                        James Clear 
+                        <br>
+                        320 pages
+                    </p>
+                </div>
+                <div class="read-toggle-container">
+                    <div id="toggle">
+                        <input type="checkbox" id="read-toggle">
+                        <label for="read-toggle" id="toggle-label"></label>
+                    </div>
+                </div>
+            </div>
+            <div class="book-list-container">
+                <div class="book-container">
+                    <h3>Atomic Habits</h3>
+                    <p>
+                        James Clear 
+                        <br>
+                        320 pages
+                    </p>
+                </div>
+                <div class="read-toggle-container">
+                    <div id="toggle">
+                        <input type="checkbox" id="read-toggle">
+                        <label for="read-toggle" id="toggle-label"></label>
+                    </div>
+                </div>
+            </div>
+            <div class="book-list-container">
+                <div class="book-container">
+                    <h3>Atomic Habits</h3>
+                    <p>
+                        James Clear 
+                        <br>
+                        320 pages
+                    </p>
+                </div>
+                <div class="read-toggle-container">
+                    <div id="toggle">
+                        <input type="checkbox" id="read-toggle">
+                        <label for="read-toggle" id="toggle-label"></label>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="button-section">
             <div id="button-container">
                 <button>Add book</button>
             </div>
