refactor: modify book section contents
- Input and label selectors attribute changed from id to class
- Recently I added some dummy content for practice and now I removed it

--- a/index.html
+++ b/index.html
@@ -26,152 +26,24 @@
                 </div>
                 <div class="read-toggle-container">
                     <div id="toggle">
-                        <input type="checkbox" id="read-toggle">
-                        <label for="read-toggle" id="toggle-label"></label>
+                        <input type="checkbox" id="AtomicHabits" >
+                        <label for="AtomicHabits" class="js-manipulation"></label>
                     </div>
                 </div>
             </div>
             <div class="book-list-container">
                 <div class="book-container">
-                    <h3>Atomic Habits</h3>
+                    <h3>The Mountain Is You</h3>
                     <p>
-                        James Clear 
+                        Brianna Wiest
                         <br>
-                        320 pages
+                        248 pages
                     </p>
                 </div>
                 <div class="read-toggle-container">
                     <div id="toggle">
-                        <input type="checkbox" id="read-toggle">
-                        <label for="read-toggle" id="toggle-label"></label>
-                    </div>
-                </div>
-            </div>
-            <div class="book-list-container">
-                <div class="book-container">
-                    <h3>Atomic Habits</h3>
-                    <p>
-                        James Clear 
-                        <br>
-                        320 pages
-                    </p>
-                </div>
-                <div class="read-toggle-container">
-                    <div id="toggle">
-                        <input type="checkbox" id="read-toggle">
-                        <label for="read-toggle" id="toggle-label"></label>
-                    </div>
-                </div>
-            </div>
-            <div class="book-list-container">
-                <div class="book-container">
-                    <h3>Atomic Habits</h3>
-                    <p>
-                        James Clear 
-                        <br>
-                        320 pages
-                    </p>
-                </div>
-                <div class="read-toggle-container">
-                    <div id="toggle">
-                        <input type="checkbox" id="read-toggle">
-                        <label for="read-toggle" id="toggle-label"></label>
-                    </div>
-                </div>
-            </div>
-            <div class="book-list-container">
-                <div class="book-container">
-                    <h3>Atomic Habits</h3>
-                    <p>
-                        James Clear 
-                        <br>
-                        320 pages
-                    </p>
-                </div>
-                <div class="read-toggle-container">
-                    <div id="toggle">
-                        <input type="checkbox" id="read-toggle">
-                        <label for="read-toggle" id="toggle-label"></label>
-                    </div>
-                </div>
-            </div>
-            <div class="book-list-container">
-                <div class="book-container">
-                    <h3>Atomic Habits</h3>
-                    <p>
-                        James Clear 
-                        <br>
-                        320 pages
-                    </p>
-                </div>
-                <div class="read-toggle-container">
-                    <div id="toggle">
-                        <input type="checkbox" id="read-toggle">
-                        <label for="read-toggle" id="toggle-label"></label>
-                    </div>
-                </div>
-            </div>
-            <div class="book-list-container">
-                <div class="book-container">
-                    <h3>Atomic Habits</h3>
-                    <p>
-                        James Clear 
-                        <br>
-                        320 pages
-                    </p>
-                </div>
-                <div class="read-toggle-container">
-                    <div id="toggle">
-                        <input type="checkbox" id="read-toggle">
-                        <label for="read-toggle" id="toggle-label"></label>
-                    </div>
-                </div>
-            </div>
-            <div class="book-list-container">
-                <div class="book-container">
-                    <h3>Atomic Habits</h3>
-                    <p>
-                        James Clear 
-                        <br>
-                        320 pages
-                    </p>
-                </div>
-                <div class="read-toggle-container">
-                    <div id="toggle">
-                        <input type="checkbox" id="read-toggle">
-                        <label for="read-toggle" id="toggle-label"></label>
-                    </div>
-                </div>
-            </div>
-            <div class="book-list-container">
-                <div class="book-container">
-                    <h3>Atomic Habits</h3>
-                    <p>
-                        James Clear 
-                        <br>
-                        320 pages
-                    </p>
-                </div>
-                <div class="read-toggle-container">
-                    <div id="toggle">
-                        <input type="checkbox" id="read-toggle">
-                        <label for="read-toggle" id="toggle-label"></label>
-                    </div>
-                </div>
-            </div>
-            <div class="book-list-container">
-                <div class="book-container">
-                    <h3>Atomic Habits</h3>
-                    <p>
-                        James Clear 
-                        <br>
-                        320 pages
-                    </p>
-                </div>
-                <div class="read-toggle-container">
-                    <div id="toggle">
-                        <input type="checkbox" id="read-toggle">
-                        <label for="read-toggle" id="toggle-label"></label>
+                        <input type="checkbox" id="TheMountainIsYou">
+                        <label for="TheMountainIsYou" class="js-manipulation"></label>
                     </div>
                 </div>
             </div>
