--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <label for="pages">No. of pages:</label>
                     <input type="number" name="pages" id="pages">
                 </div>
-                <button>Add to list</button>
+                <button id="add-to-list">Add to list</button>
             </form>
         </dialog>
         <section id="book-section">
