refactor: Delete the dummy content

--- a/index.html
+++ b/index.html
@@ -33,38 +33,7 @@
             </form>
         </dialog>
         <section id="book-section">
-            <div class="book-list-container">
-                <div class="book-container">
-                    <h3>Atomic Habits</h3>
-                    <p>
-                        James Clear 
-                        <br>
-                        320 pages
-                    </p>
-                </div>
-                <div class="read-toggle-container">
-                    <div id="toggle">
-                        <input type="checkbox" id="AtomicHabits">
-                        <label for="AtomicHabits" class="js-manipulation"></label>
-                    </div>
-                </div>
-            </div>
-            <div class="book-list-container">
-                <div class="book-container">
-                    <h3>The Mountain Is You</h3>
-                    <p>
-                        Brianna Wiest
-                        <br>
-                        248 pages
-                    </p>
-                </div>
-                <div class="read-toggle-container">
-                    <div id="toggle">
-                        <input type="checkbox" id="TheMountainIsYou">
-                        <label for="TheMountainIsYou" class="js-manipulation"></label>
-                    </div>
-                </div>
-            </div>
+            <!-- contents here will be added through JS -->
         </section>
         <section id="button-section">
             <div id="button-container">
