--- a/index.html
+++ b/index.html
@@ -20,15 +20,33 @@
           <h5>Book details</h5>
           <div>
             <label for="title">Title:</label>
-            <input type="text" name="title" id="title" required />
+            <input
+              type="text"
+              name="title"
+              id="title"
+              class="check-value"
+              required
+            />
           </div>
           <div>
             <label for="author">Author:</label>
-            <input type="text" name="author" id="author" required />
+            <input
+              type="text"
+              name="author"
+              id="author"
+              class="check-value"
+              required
+            />
           </div>
           <div>
             <label for="pages">No. of pages:</label>
-            <input type="number" name="pages" id="pages" required />
+            <input
+              type="number"
+              name="pages"
+              id="pages"
+              class="check-value"
+              required
+            />
           </div>
           <button id="add-to-list">Add to list</button>
         </form>
